--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
-*.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
+.idea
 .DS_Store
-/build
-/captures
-.externalNativeBuild
+/gradle
+build
+SNCFFusion/gen
+atlassian-ide-plugin.xml
+**/crashlytics-build.properties
+SNCFFusion/target
+ser
+*.iml
+local.properties
+*.log
