Passage en Fragment des vues (en prévision de la tablette), arrangement des tailles sur les spells

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    dataBinding{
+    dataBinding {
         enabled = true
     }
 }
@@ -27,11 +27,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile "com.android.support:recyclerview-v7:24.2.1"
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
-    compile 'com.loopeer.library:cardstack:1.0.2'
 
-    testCompile 'junit:junit:4.12'
     compile project(path: ':cardmodel')
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+    compile 'me.grantland:autofittextview:0.2.1'
+    compile 'com.loopeer.library:cardstack:1.0.2'
+    testCompile 'junit:junit:4.12'
 }
