Création des vues de dialog, réorganisation des packages

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion "24.0.2"
     defaultConfig {
         applicationId "fr.enlight.anima.animamagiccards"
         minSdkVersion 14
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -29,10 +29,10 @@ dependencies {
     })
 
     compile project(path: ':cardmodel')
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
-    compile 'me.grantland:autofittextview:0.2.1'
     compile 'com.loopeer.library:cardstack:1.0.2'
+    compile 'com.tuyenmonkey:mkloader:1.0.0'
     testCompile 'junit:junit:4.12'
 }
