--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,11 @@ dependencies {
     })
 
     compile project(path: ':cardmodel')
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile "com.android.support:support-core-utils:25.3.1"
+    compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'jp.wasabeef:recyclerview-animators:2.2.5'
     compile 'com.loopeer.library:cardstack:1.0.2'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
