--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile "com.android.support:support-core-utils:25.3.1"
     compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
     compile 'jp.wasabeef:recyclerview-animators:2.2.5'
     compile 'com.loopeer.library:cardstack:1.0.2'
     testCompile 'junit:junit:4.12'
