Bouclage de la création des listes de sorts + passage vers Room

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
 
         <activity android:name=".ui.witchspells.WitchspellsEditionActivity"/>
+        <activity android:name=".ui.witchspells.WitchspellsMainPathChooserActivity" />
 
     </application>
 
