--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile 'jp.wasabeef:recyclerview-animators:2.2.5'
     compile 'com.azoft.carousellayoutmanager:carousel:1.2.1'
     compile 'com.loopeer.library:cardstack:1.0.2'
+    compile 'com.google.android:flexbox:0.1.3'
 
     testCompile 'junit:junit:4.12'
 }
