--- a/cardmodel/build.gradle
+++ b/cardmodel/build.gradle
@@ -28,6 +28,10 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
 
+    compile "android.arch.lifecycle:runtime:1.0.0-alpha1"
+    compile "android.arch.lifecycle:extensions:1.0.0-alpha1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha1"
+
     compile 'android.arch.persistence.room:runtime:1.0.0-alpha1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-alpha1'
 
