Début de mise en place de la sélection des sorts d'accès libre

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
 
         <activity android:name=".ui.witchspells.WitchspellsEditionActivity" />
         <activity android:name=".ui.witchspells.WitchspellsMainPathChooserActivity" />
+        <activity android:name=".ui.spells.SpellSelectionActivity" />
 
     </application>
 
