--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.witchspells.WitchspellsEditionActivity" />
+        <activity android:name=".ui.witchspells.WitchspellsEditionActivity"
+            android:windowSoftInputMode="adjustPan"/>
+
         <activity android:name=".ui.witchspells.WitchspellsMainPathChooserActivity" />
+
         <activity android:name=".ui.spells.SpellSelectionActivity" />
 
     </application>
