--- a/spellgenerator/build.gradle
+++ b/spellgenerator/build.gradle
@@ -35,7 +35,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    // implementation project(':cardmodel')
+
+    compile 'com.google.code.gson:gson:2.8.0'
+
 }
 repositories {
     mavenCentral()
